--- a/style.css
+++ b/style.css
@@ -3,3 +3,40 @@ body {
   height: 100%;
   margin: 0;
 }
+h1   {
+  text-align: center;
+}
+nav   {
+  text-align: center;
+}
+figcaption {
+  text-align: center;
+  font-size: 10px;
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+nav a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: aquamarine;
+}
+
+
+#featured-property p {
+  width: 800px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#details div {
+  float: left;
+  text-align: center;
+  width: 25%;
+  background-color: red;
+}
